--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-811.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇦 加拿大-1.77MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.80MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-2.65MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
   - {name: 塞浦路斯-380.2KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-4.72MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-819.4KB/s(Youtube:不良林), server: 194.124.35.23, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 塞浦路斯-380.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
