--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-878.3KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-296.5KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.17MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.43MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-819.4KB/s(Youtube:不良林), server: 194.124.35.23, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇰🇷 韩国-5.48MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.63MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-319.6KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 柬埔寨-3.61MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 塞浦路斯-611.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.51MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-878.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-819.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
+      - 柬埔寨-3.61MB/s(Youtube:不良林)
+      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
